# SimulStreaming-Morse

./: README.md  pyproject.toml  simulstreaming_translate.py  simulstreaming_whisper.py  simulstreaming_whisper_server.py
simulstreaming/whisper/simul_whisper/: simul_whisper.py
simulstreaming/whisper/simul_whisper/whisper/: decoding.py  tokenizer.py
