[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simulstreaming-morse"
version = "0.1.0"
description = "SimulStreaming fork with International Morse Code (imc) language tag support"
readme = "README.md"
license = { file = "LICENCE.txt" }
requires-python = ">=3.14"
authors = [{ name = "Michael Lin" }]
keywords = ["whisper", "asr", "speech", "translation", "streaming", "morse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    # Whisper / streaming
    "librosa",
    "torchaudio",
    "torch",
    "tqdm",
    "tiktoken",
    'triton>=2.0.0; platform_machine == "x86_64" and sys_platform == "linux"',
    # Translation
    "ctranslate2",
    "transformers",
    "sentencepiece",
    "jinja2",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
]

[project.scripts]
simulstreaming-whisper = "simulstreaming_whisper:main"
simulstreaming-whisper-server = "simulstreaming_whisper_server:main"
simulstreaming-translate = "simulstreaming_translate:main_simulation_from_file"
simulstreaming-translate-server = "simulstreaming_translate_server:main_server"

[tool.hatch.build.targets.wheel]
packages = ["simulstreaming"]

[tool.hatch.build.targets.wheel.force-include]
"simulstreaming_whisper.py" = "simulstreaming_whisper.py"
"simulstreaming_whisper_server.py" = "simulstreaming_whisper_server.py"
"simulstreaming_translate.py" = "simulstreaming_translate.py"
"simulstreaming_translate_server.py" = "simulstreaming_translate_server.py"

[tool.hatch.build.targets.sdist]
include = [
    "simulstreaming/",
    "simulstreaming_whisper.py",
    "simulstreaming_whisper_server.py",
    "simulstreaming_translate.py",
    "simulstreaming_translate_server.py",
    "tools/",
    "README.md",
    "LICENCE.txt",
]
